--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="start_button">go paint </string>
     <string name="gallery_text">Gallery</string>
     <string name="canvasContentDescription">This is an empty canvas.. start painting!</string>
+    <string name="painting_saved">Painting saved!</string>
 </resources>
