--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="gallery_text">Gallery</string>
     <string name="canvasContentDescription">This is an empty canvas.. start painting!</string>
     <string name="painting_saved">Painting saved!</string>
+    <string name="delete_dialog">You really want to delete this painting?</string>
+    <string name="painting_deleted">Painting was deleted</string>
 </resources>
