--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,11 @@
     <string name="gallery_text">Gallery</string>
     <string name="canvasContentDescription">This is an empty canvas.. start painting!</string>
     <string name="painting_saved">Painting saved!</string>
+
     <string name="delete_dialog">You really want to delete this painting?</string>
+    <string name="delete_dialog_yes">yes</string>
+    <string name="delete_dialog_no">no</string>
+
     <string name="painting_deleted">Painting was deleted</string>
     <string name="share_text">Look what I did! using Out Draw</string>
     <string name="sharing_failed">Something went wrong..</string>
