--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Out Draw</string>
     <string name="welcome_text">“You must have chaos within you to give birth to a dancing star.”</string>
     <string name="start_button">go paint </string>
-    <string name="gallery_text">Gallery</string>
+    <string name="gallery_text">gallery</string>
     <string name="canvasContentDescription">This is an empty canvas.. start painting!</string>
     <string name="painting_saved">Painting saved!</string>
 
@@ -16,4 +16,6 @@
     <string name="share_where">where to share?</string>
     <string name="about_text">Draw App pushes you out of your usual habits with choosing color and thickness of every line you draw.</string>
     <string name="about_text2">And careful! Once drawn there\'s no going back.</string>
+    <string name="about_button_text">about</string>
+    <string name="back_button_text">back</string>
 </resources>
