--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Out Draw</string>
+    <string name="app_name">outdraw</string>
     <string name="welcome_text">“You must have chaos within you to give birth to a dancing star.”</string>
     <string name="start_button">go paint </string>
     <string name="gallery_text">gallery</string>
